--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "macro-css",
-  "version": "1.0.0",
-  "main": "gulpfile.js",
+  "version": "1.0.2",
+  "main": "index.min.css",
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
