--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "macro-css",
-  "version": "1.0.2",
+  "version": "1.0.3",
+  "style": "index.min.css",
   "main": "index.min.css",
+  "filename": "index.min.css",
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
